--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -88,4 +88,65 @@ body {
 footer {
   height: 100px;
   margin-top: 30px;
+  text-align: center;
 }
+
+footer p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color: white;
+  font-weight: bolder;
+}
+
+footer a {
+  text-decoration: none;
+  padding: 20px;
+  color: black;
+}
+
+footer a:hover {
+  font-weight: bolder;
+  font-size: 18px;
+  color: white;
+}
+
+.menu1 {
+  height: 680px;
+  padding: 90px 40px 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 50px;
+}
+
+.combo1 {
+  height: 450px;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.concombo1 {
+  width:100%;
+  height:200px;
+  background:white;
+  border-radius:15px;
+  overflow:hidden;
+}
+
+.combo1 ul li {
+  margin-top: 15px;
+}
+
+.comboH1 {
+  text-align:center;
+}
+
+.comImg {
+  width: 100%
+}
+
+.comboC1{
+  font-weight:bolder;
+  font-size:27px;
+  text-align:center;
+}
+
