--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -23,6 +23,7 @@ body {
   width: 100%;
   height: 80px;
   position: fixed;
+  z-index: 10;
 }
 
 .ulnav {
@@ -111,7 +112,7 @@ footer a:hover {
 }
 
 .menu1 {
-  height: 680px;
+  height: 1080px;
   padding: 90px 40px 0;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -138,10 +139,12 @@ footer a:hover {
 
 .comboH1 {
   text-align:center;
+  
 }
 
 .comImg {
-  width: 100%
+  width: 100%;
+  transition: ease 0.5s;
 }
 
 .comboC1{
@@ -150,3 +153,81 @@ footer a:hover {
   text-align:center;
 }
 
+.comImg:hover {
+  transform: scale(1.25);
+}
+
+.contact {
+  padding-top:110px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.about {
+  text-align: center;
+  width: 700px;
+  height: 500px;
+}
+
+.resImg {
+  width: 550px;
+  margin: auto;
+  height: 400px;
+  border-radius: 15px;
+  border: 5px solid black;
+}
+
+form {
+  width: 400px;
+  background: whitesmoke;
+  margin-left: 50px;
+  border-radius: 15px;
+  border: 2px solid black;
+  height: 360px;
+
+}
+.formTitle {
+  text-align: center;
+  font-weight: bolder;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: larger;
+  color: #007a43;
+  margin-top: 20px;
+}
+
+.message {
+  display: block;
+  margin:20px auto;
+  height: 40px;
+  width: 80%;
+}
+
+.buton {
+  width: 100px;
+  height: 60px;
+  font-size: medium;
+  font-weight: bolder;
+  background: #007a43;
+  color: white;
+  border-radius: 15px;
+  display: block;
+  margin: 20px auto;
+}
+
+.buton:hover{
+  background: whitesmoke;
+  color: #007a43;
+}
+
+.street {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  margin-top: 25px;
+}
+
+.numphone {
+  font-size: 30px;
+  color: white;
+}
